Bulk: Multiplace Setup
Initial setup, more to come later + fixes

--- a/.vscode/settings.example.json
+++ b/.vscode/settings.example.json
@@ -18,6 +18,8 @@
 	},
 
 	"material-icon-theme.folders.associations": {
-		"places": "project"
+		"places": "project",
+		"places/lobby": "global",
+		"out/lobby": "global"
 	}
 }
