--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flamework-template",
+  "name": "blackout",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -30,6 +30,7 @@
     "@flamework/components": "^1.0.0-beta.21",
     "@flamework/core": "^1.0.0-beta.21",
     "@flamework/networking": "^1.0.0-beta.21",
+    "@rbxts/roact": "^1.4.4-ts.0",
     "rbxts-transform-debug": "^2.0.3",
     "rbxts-transform-env": "^2.0.4"
   }
