--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@flamework/core": "^1.0.0-beta.21",
     "@flamework/networking": "^1.0.0-beta.21",
     "@rbxts/roact": "^1.4.4-ts.0",
+    "@rbxts/rodux": "^3.0.0-ts.3",
     "rbxts-transform-debug": "^2.0.3",
     "rbxts-transform-env": "^2.0.4"
   }
